<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_back_pic">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">
        <com.and.wodness.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_app_logo_name"
            android:textSize="@dimen/splash_logo_app_name_textsize"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/splash_logo_textview_margin_bottom"
            />
        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="@dimen/splash_logo_image_width_height"
            android:layout_height="@dimen/splash_logo_image_width_height"
            android:scaleType="fitCenter"
            app:srcCompat = "@drawable/splash_logo_pic"
            android:layout_marginBottom="@dimen/first_login_imageview_margin_bottom"
            />
        <com.and.wodness.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_login_str1"
            android:textSize="@dimen/first_login_str1_textsize"
            android:textColor="@android:color/white"
            />
        <com.and.wodness.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_login_str2"
            android:textSize="@dimen/first_login_str1_textsize"
            android:textColor="@android:color/white"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go to Mapactivity"
            android:id="@+id/gotomap_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <com.and.wodness.CustomButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/first_login_lightgray_button"
            android:text="@string/first_login_joinus_str"
            android:textSize="16dp"
            android:id="@+id/first_login_joinus_button"
            />
        <com.and.wodness.CustomButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/first_login_lightgray_button"
            android:text="@string/first_login_login_str"
            android:textSize="16dp"
            android:id="@+id/first_login_login_button"
            />
    </LinearLayout>
</RelativeLayout>
