<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <com.and.wodness.CustomButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_back_btn"
                android:textColor="@color/colorProgress"
                android:textSize="@dimen/recover_back_button_textsize"
                android:id="@+id/recover_back_button"
                android:background="@android:color/transparent"/>

            <com.and.wodness.CustomTextView
                android:id="@+id/customTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/recover_title_padding_left"
                android:text="@string/recover_title_str"
                android:textColor="@android:color/black"
                android:textSize="@dimen/recover_title_textsize"
                android:layout_weight="0.38" />

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#c0c0c0"/>
        <LinearLayout
            android:paddingTop="@dimen/recover_line_padding_top"
            android:layout_marginLeft="@dimen/recover_back_button_textsize"
            android:layout_marginRight="@dimen/recover_back_button_textsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.and.wodness.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recover_username_edittext"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="USERNAME"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edt_bg_selector_profile"/>
            <LinearLayout
                android:paddingTop="30dp"
                android:paddingBottom="@dimen/joinus_line_padding_top_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="@dimen/joinus_line_size"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="#c0c0c0" />
                <com.and.wodness.CustomTextView
                    android:paddingLeft="@dimen/joinus_line_padding_left_right_size"
                    android:paddingRight="@dimen/joinus_line_padding_left_right_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinus_or_str"
                    android:textSize="@dimen/joinus_or_text_size"/>
                <View
                    android:layout_width="@dimen/joinus_line_size"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="#c0c0c0"/>
            </LinearLayout>

            <com.and.wodness.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recover_email_edittext"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="EMAIL"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edt_bg_selector_profile"
                />
            <com.and.wodness.CustomButton
                android:layout_marginTop="@dimen/joinus_line_padding_bottom_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/create_an_account"
                android:text="@string/recover_reset_pwd"
                android:id="@+id/recover_reset_password_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/recover_reset_pwd_textsize"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
