<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"

        android:weightSum="1">
    <com.and.wodness.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="C O M P L E T E   Y O U R   P R O F I L E"
        android:textSize="23dp"
        android:textColor="@android:color/black"/>
        <View
            android:layout_marginTop="@dimen/profile_title_margin_bottom"
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#c0c0c0"/>
         <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="@dimen/profile_button_margin"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_photo_imageview"
        android:layout_gravity="center_horizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/photo"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#FF000000"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="106dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:background="@drawable/take_a_photo"
            android:layout_marginTop="10dp"
             />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/profile_edit_text_margin_bottom">
                <com.and.wodness.CustomEditText
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_firstname_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_firstname_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomEditText
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_lastname_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_lastname_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomTextView
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_ddmmyy_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_datename_hint"
                    android:textSize="11sp"

                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/profile_edit_text_margin_bottom"
            android:layout_gravity="center_horizontal">
                <com.and.wodness.CustomTextView
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_gender_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_gender_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomEditText
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_height_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_height_hint"
                    android:textSize="11sp"
                    android:numeric="integer"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomEditText
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_weight_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_weight_hint"
                    android:textSize="11sp"
                    android:numeric="integer"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/profile_edit_text_margin_bottom"
            android:layout_gravity="center_horizontal">
                <com.and.wodness.CustomEditText
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_username_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_username_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomEditText
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_email_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_email_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
                <com.and.wodness.CustomTextView
                    android:layout_marginLeft="@dimen/profile_edit_text_margin_left"
                    android:layout_width="@dimen/profile_edit_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_country_edittext"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/joinus_country_hint"
                    android:textSize="11sp"
                    android:textColor="@color/edittext_color_light_blue"
                    android:textColorHint="@color/edittext_color_light_blue"
                    android:background="@drawable/edt_bg_selector_profile"
                    />
            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/profile_title_margin_bottom"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"/>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.and.wodness.CustomButton
                    android:layout_width="30dp"
                    android:layout_height="31dp"
                    android:background="@drawable/round_shape"
                    android:id="@+id/profile_private_check_button"/>
                <com.and.wodness.CustomTextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="P R I V A T E   P R O F I L E"
                    android:textColor="@color/colorprivateprofile"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="-20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:orientation="vertical">
            <com.and.wodness.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="Y O U R   H I S T O R Y ,  F A V O R I T E S,  P E R S O N A L   D E T A I L S ,"/>
            <com.and.wodness.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="A N D   L O C A T I O N   W I L L   B E   H I D D E N .   Y O U R  S C O R E S   W I L L"/>
            <com.and.wodness.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="S T I L L   B E   P O S T E D  T O   T H E   L E A D E R B O A R D ."/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
            <com.and.wodness.CustomButton
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="D O N E"
                android:textSize="15sp"
                android:id="@+id/profile_done_button"
                android:background="@drawable/create_an_account"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"/>

</RelativeLayout>
